Добавила  к барашкам CardView с каунтером выбранных фоток внизу экрана. Но почему то приложение крашится. Подскажите пожалуйста, что не так.

--- a/app/src/main/res/layout/item_sheep.xml
+++ b/app/src/main/res/layout/item_sheep.xml
@@ -20,6 +20,14 @@
             android:src="@drawable/ic_launcher_background"
             android:contentDescription="image"
             android:scaleType="centerCrop"/>
+
+        <ImageView
+            android:id="@+id/done"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:src="@drawable/ic_baseline_done_24"
+            android:visibility="invisible"/>
+
     </androidx.cardview.widget.CardView>
 
 
